--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "merkoa",
   "version": "0.1.0",
-  "description": "",
+  "description": "Middleware for mercuri to communicate with the backend.",
   "main": "index.js",
   "scripts": {
     "check": "npm run format && npm run lint",
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@koa/cors": "2.2.3",
+    "axios": "^0.21.1",
     "dotenv": "8.0.0",
     "joi": "14.3.1",
     "koa": "2.7.0",
