--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,7 @@
 {
+  "useTabs": false,
   "printWidth": 80,
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "proseWrap": "always"
+  "singleQuote": false
 }
