--- a/package.json
+++ b/package.json
@@ -25,14 +25,11 @@
   },
   "dependencies": {
     "@koa/cors": "2.2.3",
-    "axios": "^0.21.1",
-    "dotenv": "8.0.0",
-    "joi": "14.3.1",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compress": "3.0.0",
     "koa-helmet": "4.1.0",
-    "koa-router": "7.4.0",
-    "uuid": "3.3.2"
+    "koa-proxies": "^0.12.1",
+    "koa-router": "7.4.0"
   }
 }
