--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "koa-compress": "3.0.0",
     "koa-helmet": "4.1.0",
     "koa-proxies": "^0.12.1",
-    "koa-router": "7.4.0"
+    "koa-router": "^7.4.0",
+    "koa-websocket": "^6.0.0",
+    "websocket": "^1.0.34"
   }
 }
