--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "eslint": "5.16.0",
     "eslint-config-prettier": "4.3.0",
     "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-node": "9.0.1",
     "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-promise": "4.2.1",
     "husky": "2.3.0",
     "nodemon": "^1.19.0",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@koa/cors": "2.2.3",
+    "config": "^3.3.6",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compress": "3.0.0",
